<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@drawable/_bg__splashscreen_shape">


		<RelativeLayout android:id="@+id/content_container"
			android:layout_width="wrap_content"
			android:layout_height="match_parent" >


			<TextView
				android:id="@+id/vote_your_best_candidate"
				android:layout_width="253dp"
				android:layout_height="65dp"
				android:layout_below="@id/drawkit_grape_pack_illustration_7"
				android:layout_alignParentStart="true"
				android:layout_alignParentEnd="true"
				android:layout_gravity="center_horizontal|center"
				android:layout_marginTop="10dp"
				android:fontFamily="Montserrat"
				android:gravity="center"
				android:text="@string/vote_your_best_candidate_string"
				android:textColor="@color/vote_your_best_candidate_color"
				android:textSize="20sp"
				android:textStyle="bold" />

			<RelativeLayout android:id="@+id/group_8"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_alignParentBottom="true"
				android:layout_alignParentRight="true"
				android:layout_marginRight="-20dp"
				android:layout_marginBottom="-15dp"
				>

				<View android:id="@+id/rectangle_1"
					android:background="@drawable/rectangle_1_shape"
					 android:layout_marginLeft="0dp"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="111dp"
					android:layout_height="54dp" />

				<TextView android:id="@+id/mulai"
					android:fontFamily="Montserrat"
					android:textStyle="bold"
					android:layout_gravity="center_horizontal|center"
					android:gravity="center"
					android:textSize="14sp"
					android:textColor="@color/mulai_color"
					android:layout_marginLeft="24dp"
					android:layout_marginTop="10dp"
					android:layout_width="45dp"
					android:layout_height="21dp"
					android:text="@string/mulai_string"
					 />

			</RelativeLayout>

			<ImageView
				android:id="@+id/drawkit_grape_pack_illustration_7"
				android:layout_width="match_parent"
				android:layout_height="472dp"
				android:layout_marginTop="90dp"
				android:layout_marginRight="-100dp"
				android:contentDescription="@string/drawkit_grape_pack_illustration_7"
				android:src="@drawable/drawkit_grape_pack_illustration_7" />

		</RelativeLayout>

</RelativeLayout>