<RelativeLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="wrap_content"
	android:background="@drawable/_bg__home___1_shape">

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="match_parent"
			android:paddingTop="12dp"
			android:layout_height="match_parent" >

			<TextView android:id="@+id/dashboard"
				android:fontFamily="Ubuntu"
				android:textStyle="bold"
				android:layout_gravity="center_horizontal|center"
				android:gravity="center"
				android:textSize="17sp"
				android:textColor="@color/dashboard_color"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:text="@string/dashboard_string" />

			<RelativeLayout android:id="@+id/group_7"
				android:layout_marginTop="40dp"
				android:layout_marginStart="0dp"
				android:layout_marginBottom="-20dp"
				android:layout_width="match_parent"
				android:layout_height="match_parent" >

				<View android:id="@+id/rectangle_2"
					android:background="@drawable/rectangle_2_shape"
					android:layout_marginLeft="0dp"
					android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="match_parent"
					android:layout_height="match_parent" />

				<RelativeLayout android:id="@+id/group_6"
					android:layout_marginTop="22dp"
					android:layout_marginStart="23dp"
					android:layout_width="match_parent"
					android:layout_height="wrap_content">

					<FrameLayout
						android:id="@+id/akbaralzaini_copy"
						android:layout_width="82dp"
						android:layout_height="82dp">

						<ImageView
							android:id="@+id/gambar"
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:scaleType="centerCrop"
							android:padding="6dp"
							android:src="@drawable/akbaralzainiy"
							android:contentDescription="t1" />

						<ImageView
							android:src="@drawable/profilframe"
							android:layout_width="match_parent"
							android:layout_height="match_parent" />
					</FrameLayout>

					<TextView android:id="@+id/akbar_al_zaini"
						android:fontFamily="Ubuntu"
						android:layout_gravity="center_horizontal|center"
						android:gravity="center"
						android:textSize="18sp"
						android:textColor="@color/akbar_al_zaini_color"
						android:layout_toRightOf="@id/akbaralzaini_copy"
						android:layout_marginLeft="12dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:text="@string/akbar_al_zaini_string" />


					<RelativeLayout android:id="@+id/group_5"
						android:layout_toRightOf="@id/akbaralzaini_copy"
						android:layout_below="@id/akbar_al_zaini"
						android:layout_marginLeft="12dp"
						android:layout_marginTop="8dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content" >

						<View android:id="@+id/rectangle_3"
							android:background="@drawable/rectangle_3_shape"
							android:layout_marginLeft="0dp"
							android:layout_marginStart="0dp"
							android:layout_marginTop="0dp"
							android:layout_width="90dp"
							android:layout_height="30dp" />

						<TextView android:id="@+id/edit_profil"
							android:fontFamily="Calibri"
							android:layout_gravity="center_horizontal|center"
							android:gravity="center"
							android:textColor="@color/dashboard_color"
							android:layout_marginLeft="14dp"
							android:layout_marginTop="4dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							android:text="@string/edit_profil_string"
							 />

					</RelativeLayout>

				</RelativeLayout>

				<ImageView android:id="@+id/line_1"
					android:src="@drawable/line_1"
					android:contentDescription="line_1"
					android:layout_below="@id/group_6"
					android:layout_margin="12dp"
					android:layout_width="match_parent"
					android:layout_height="2dp" />

				<TextView android:id="@+id/kandidat"
					android:fontFamily="Calibri"
					android:textStyle="bold"
					android:textSize="18sp"
					android:textColor="@color/kandidat_color"
					android:gravity="center"
					android:layout_below="@id/line_1"
					android:layout_width="match_parent"
					android:layout_height="26dp"
					android:text="@string/kandidat_string"
					/>

				<ListView
					android:id="@+id/listkandidat"
					android:layout_width="match_parent"
					android:layout_below="@id/kandidat"
					android:layout_margin="12dp"
					android:layout_height="wrap_content"/>

				<RelativeLayout
					android:layout_width="match_parent"
					android:layout_height="74dp"
					android:layout_marginRight="12dp"
					android:layout_marginLeft="12dp"
					android:layout_below="@id/listkandidat">

					<View
						android:id="@+id/rectangle_2208"
						android:layout_width="match_parent"
						android:layout_height="wrap_content"
						android:layout_marginStart="0dp"
						android:layout_marginLeft="0dp"
						android:layout_marginTop="0dp"
						android:background="@drawable/rectangle_2208_shape" />

					<FrameLayout
						android:id="@+id/tambahlogo"
						android:layout_width="60dp"
						android:layout_height="60dp"
						android:layout_margin="6dp">

						<ImageView
							android:id="@+id/Icontambah"
							android:layout_width="match_parent"
							android:layout_height="match_parent"
							android:scaleType="centerCrop"
							android:padding="7dp"
							android:src="@drawable/iconplus"
							android:contentDescription="icontambah" />

						<ImageView
							android:src="@drawable/frame"
							android:layout_width="match_parent"
							android:layout_height="match_parent" />
					</FrameLayout>
					<TextView
						android:layout_width="wrap_content"
						android:layout_height="match_parent"
						android:gravity="center"
						android:text="Tambah Kandidat"
						android:textSize="20sp"
						android:layout_toRightOf="@id/tambahlogo"/>
				</RelativeLayout>

			</RelativeLayout>

		</RelativeLayout>

</RelativeLayout>