<HorizontalScrollView xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent" android:layout_height="wrap_content" >
	<!-- 
	/*
	 *	This content is generated from the API File Info.
	 *	(Alt+Shift+Ctrl+I).
	 *
	 *	@desc 		
	 *	@file 		login
	 *	@date 		0
	 *	@title 		Login
	 *	@author 	
	 *	@keywords 	
	 *	@generator 	Export Kit v1.3.xd
	 *
	 */
	-->
	<ScrollView android:id="@+id/login" 
		android:layout_width="wrap_content" 
		android:layout_height="match_parent" >

		<RelativeLayout android:id="@+id/content_container" 
			android:layout_width="wrap_content" 
			android:layout_height="wrap_content" >

			<View android:id="@+id/_bg__login"
				android:background="@drawable/_bg__login_shape"
				 android:layout_marginLeft="0dp"
				 android:layout_marginStart="0dp"
				android:layout_marginTop="0dp"
				android:layout_width="360dp"
				android:layout_height="640dp" />

			<ImageView android:id="@+id/drawkit_grape_pack_illustration_16"
				android:src="@drawable/drawkit_grape_pack_illustration_16"
				android:contentDescription="drawkit_grape_pack_illustration_16"
				 android:layout_marginLeft="146dp"
				 android:layout_marginStart="146dp"
				android:layout_marginTop="329dp"
				android:layout_width="291dp"
				android:layout_height="311dp" />




			<RelativeLayout android:id="@+id/email"
				android:layout_marginTop="124dp"
				android:layout_marginStart="24dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View android:id="@+id/rectangle_33"
					android:background="@drawable/rectangle_33_shape"
					 android:layout_marginLeft="0dp"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="325dp"
					android:layout_height="59dp" />

				<TextView android:id="@+id/janedoe123_email_com"
					android:fontFamily="Neusa Next Std"
					android:textSize="15sp"
					android:textColor="@color/janedoe123_email_com_color"
					android:layout_marginLeft="56dp"
					android:layout_marginTop="28dp"
					android:layout_width="165dp"
					android:layout_height="23dp"
					android:text="@string/janedoe123_email_com_string"
					 />

				<TextView android:id="@+id/email_ek1"
					android:fontFamily="Neusa Next Std"
					android:alpha="0.5"
					 android:textSize="12sp"
					android:textColor="@color/janedoe123_email_com_color"
					android:layout_marginLeft="57dp"
					android:layout_marginTop="11dp"
					android:layout_width="42dp"
					android:layout_height="18dp"
					android:text="@string/email_ek1_string"
					 />


				<RelativeLayout android:id="@+id/_001_mail"
					android:layout_marginTop="24dp"
					android:layout_marginStart="18dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>


					<RelativeLayout android:id="@+id/group_114"
						android:layout_marginTop="0dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>


						<RelativeLayout android:id="@+id/group_113"
							android:layout_marginTop="0dp"
							android:layout_marginStart="0dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<ImageView android:id="@+id/path_64"
								android:src="@drawable/path_64"
								android:contentDescription="path_64"
								 android:layout_marginLeft="-0dp"
								 android:layout_marginStart="-0dp"
								android:layout_marginTop="-0dp"
								android:layout_width="19.26383972168dp"
								android:layout_height="14.199951171875dp" />

						</RelativeLayout>

					</RelativeLayout>


					<RelativeLayout android:id="@+id/group_116"
						android:layout_marginTop="1dp"
						android:layout_marginStart="1dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>


						<RelativeLayout android:id="@+id/group_115"
							android:layout_marginTop="0dp"
							android:layout_marginStart="0dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<ImageView android:id="@+id/path_65"
								android:src="@drawable/path_65"
								android:contentDescription="path_65"
								 android:layout_marginLeft="0dp"
								 android:layout_marginStart="0dp"
								android:layout_marginTop="0dp"
								android:layout_width="17.610076904297dp"
								android:layout_height="7.7442626953125dp" />

						</RelativeLayout>

					</RelativeLayout>

				</RelativeLayout>

			</RelativeLayout>


			<RelativeLayout android:id="@+id/password"
				android:layout_marginTop="183dp"
				android:layout_marginStart="24dp"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				>

				<View android:id="@+id/rectangle_33_ek1"
					android:background="@drawable/rectangle_33_ek1_shape"
					 android:layout_marginLeft="0dp"
					 android:layout_marginStart="0dp"
					android:layout_marginTop="0dp"
					android:layout_width="325dp"
					android:layout_height="59dp" />

				<TextView android:id="@+id/_________________________"
					android:fontFamily="Neusa Next Std"
					android:textSize="15sp"
					android:textColor="@color/janedoe123_email_com_color"
					android:layout_marginLeft="57dp"
					android:layout_marginTop="34dp"
					android:layout_width="155dp"
					android:layout_height="23dp"
					android:text="@string/__________________________string"
					 />

				<TextView android:id="@+id/password_ek1"
					android:fontFamily="Neusa Next Std"
					android:alpha="0.5"
					 android:textSize="12sp"
					android:textColor="@color/janedoe123_email_com_color"
					android:layout_marginLeft="57dp"
					android:layout_marginTop="11dp"
					android:layout_width="73dp"
					android:layout_height="18dp"
					android:text="@string/password_ek1_string"
					 />


				<RelativeLayout android:id="@+id/_002_password"
					android:layout_marginTop="18dp"
					android:layout_marginStart="18dp"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					>


					<RelativeLayout android:id="@+id/group_118"
						android:layout_marginTop="0dp"
						android:layout_marginStart="0dp"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						>


						<RelativeLayout android:id="@+id/group_117"
							android:layout_marginTop="0dp"
							android:layout_marginStart="0dp"
							android:layout_width="wrap_content"
							android:layout_height="wrap_content"
							>

							<View android:id="@+id/ellipse_18"
								android:background="@drawable/ellipse_18_shape"
								 android:layout_marginLeft="14dp"
								 android:layout_marginStart="14dp"
								android:layout_marginTop="14dp"
								android:layout_width="1.796875dp"
								android:layout_height="1.796875dp" />

							<ImageView android:id="@+id/path_66"
								android:src="@drawable/path_66"
								android:contentDescription="path_66"
								 android:layout_marginLeft="0dp"
								 android:layout_marginStart="0dp"
								android:layout_marginTop="0dp"
								android:layout_width="19.25dp"
								android:layout_height="22dp" />

							<View android:id="@+id/ellipse_19"
								android:background="@drawable/ellipse_19_shape"
								 android:layout_marginLeft="7dp"
								 android:layout_marginStart="7dp"
								android:layout_marginTop="14dp"
								android:layout_width="1.796875dp"
								android:layout_height="1.796875dp" />

							<View android:id="@+id/ellipse_20"
								android:background="@drawable/ellipse_20_shape"
								 android:layout_marginLeft="4dp"
								 android:layout_marginStart="4dp"
								android:layout_marginTop="14dp"
								android:layout_width="1.796875dp"
								android:layout_height="1.796875dp" />

							<View android:id="@+id/ellipse_21"
								android:background="@drawable/ellipse_21_shape"
								 android:layout_marginLeft="10dp"
								 android:layout_marginStart="10dp"
								android:layout_marginTop="14dp"
								android:layout_width="1.796875dp"
								android:layout_height="1.796875dp" />

						</RelativeLayout>

					</RelativeLayout>

				</RelativeLayout>

			</RelativeLayout>

			<TextView android:id="@+id/login_ek1"
				android:fontFamily="Segoe UI"
				android:textStyle="bold"
				android:textSize="30sp"
				android:textColor="@color/login_color"
				android:layout_marginLeft="24dp"
				android:layout_marginTop="59dp"
				android:layout_width="81dp"
				android:layout_height="46dp"
				android:text="@string/login_ek1_string"
				 />

		</RelativeLayout>

	</ScrollView>
</HorizontalScrollView>